civo/global-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: graph-ingress
  namespace: dependencies
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/app-root: /
    ingress.kubernetes.io/content-type-nosniff: "false"
spec:
  rules:
  - http:
      paths:
      - path: /graph-graphql
        backend:
          serviceName: graph-graphql-service
          servicePort: 4001
      - path: /graph-api
        backend:
          serviceName: graph-api-service
          servicePort: 8000
      - path:
        backend:
          serviceName: graph-viewer-service
          servicePort: 4200
